<resources>
    <string name="app_name">BillBook</string>
    <string name="aatmnirbhar_bhartiyo_ka_app">10,00,000 + आत्मनिर्भर व्यापारियों का App</string>
    <string name="automatic_backups">Automatic Backups</string>
    <string name="secure">100 % Secure</string>
    <string name="select_language">Select Language</string>
    <string name="your_mobile_number">Your Mobile Number</string>
    <string name="We_will_send_OTP_verify_your_mobile_number">We will send an OTP to verify your mobile number</string>
    <string name="iso_27001">ISO 27001</string>
    <string name="percent_Secure">100 % Secure</string>
    <string name="verify">Verify</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="recieved_payment">Recieved Payment</string>
    <string name="purchase">Purchase</string>
    <string name="reports">Reports</string>
    <string name="payment_out">Payment Out</string>
    <string name="quotation">Quotation/\n Estimate</string>
    <string name="sales_return">Sales Return</string>
    <string name="purchase_return">Purchase\n Return</string>
    <string name="expense">Expense</string>
    <string name="counter_POS">Counter POS</string>
    <string name="Delivery_challan"> Delivery Challan</string>
    <string name="parties">Parties</string>
    <string name="search_party_by_billing_name">Search party by billing name</string>
    <string name="purchase_order">Purchase Order</string>
    <string name="bill_invoice">Bill / Invoice</string>
    <string name="create_new_party">Create New Party</string>
    <string name="sort_fiter">Sort &amp; Filter</string>
    <string name="sort_parties_by">Sort Parties By</string>
    <string name="apply">Apply</string>
    <string name="cont">continue</string>
    <string name="amount_high_to_low">Amount - High to Low</string>
    <string name="amount_low_to_high">Amount - Low to high</string>
    <string name="Create_New_Party">Create New Party</string>
    <string name="party_name">Party Name *</string>
    <string name="contact_number">Contact Number</string>
    <string name="party_type">Party Type*</string>
    <string name="save">Save</string>
    <string name="create_new_item">Create New Item</string>
    <string name="low_stock">Low Stock</string>
    <string name="select_category">Select Category</string>
    <string name="sort_iTEMS_by">Sort ITEMS By</string>
    <string name="item_name_a_to_z">Item name - A to Z</string>
    <string name="item_name_z_to_a">Item name - Z to A</string>
    <string name="quantity_low_to_high">Quantity - Low to High</string>
    <string name="quantity_high_to_low">Quantity - High to Low</string>
    <string name="filter_items_by">Filter ITEMS By</string>
    <string name="Not_in_Stock">Not in Stock</string>
    <string name="in_Stock">In Stock</string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="enter_oTP">Enter OTP</string>
    <string name="Create_New_Item">Create New Item</string>
    <string name="Item_Name">Item Name *</string>
    <string name="COMPANY_NAME_GST_SETTINGS">COMPANY NAME &amp; GST SETTINGS</string>
    <string name="Buy_Premium_Plan">Buy Premium Plan</string>
    <string name="Online_Store">Online Store</string>
    <string name="Bulk_Upload_Items">Bulk Upload Items</string>
    <string name="UPI_Payment_Link">UPI Payment Link</string>
    <string name="Desktop_Login">Desktop Login</string>
    <string name="Settings">Settings</string>
    <string name="Manage_Staff">Manage Staff</string>
    <string name="Profile_Settings">Profile Settings</string>
    <string name="App_Settings">App Settings</string>
    <string name="others">Others</string>
    <string name="Become_a_My_BillBook_app_reseller">Become a My BillBook app reseller</string>
    <string name="Business_Card">Business Card</string>
    <string name="Greetings">Greetings</string>
    <string name="Buy_Printer">Buy Printer</string>
    <string name="Rate_app_on_Playstore">Rate app on Playstore</string>
    <string name="About">About</string>
    <string name="GST_Rate_Finder">GST Rate Finder</string>
    <string name="Help_Support">Help &amp; Support</string>
    <string name="Most_Watch_Vedios">Most Watch Vedios</string>
    <string name="View_all">View all</string>
    <string name="How_to_change_invoice_format">How to change invoice format</string>
    <string name="How_to_add_items_in_bulk_using_BillBook">How to add items in bulk using BillBook</string>
    <string name="How_to_enter_CGST_SGST_IGST">How to enter CGST SGST IGST</string>
    <string name="How_to_add_party_balance">How to add party balance</string>
    <string name="How_to_add_additional_columns_to_invoice">How to add additional columns to invoice</string>
    <string name="How_to_add_party_GST">How to add party GST</string>
    <string name="Features_of_My_BillBook">Features of My BillBook</string>
    <string name="How_to_give_discount_while_billing">How to give discount while billing</string>
    <string name="How_to_change_price_and_unit_while_billing">How to change price and unit while billing</string>
    <string name="How_to_add_free_items">How to add free items</string>
    <string name="How_to_make_GST_bill">How to make GST bill</string>
    <string name="How_to_add_and_manage_stock">How to add and manage stock</string>
    <string name="How_to_add_items_in_bulk_using_My_BillBook">How to add items in bulk using My BillBook</string>
    <string name="How_to_add_MRP">How to add MRP</string>
    <string name="How_to_use_items_library">How to use items library</string>
    <string name="How_to_add_wholesale_price">How to add wholesale price</string>
    <string name="How_to_add_units_to_items">How to add units to items</string>
    <string name="How_to_create_barcode">How to create barcode</string>
    <string name="How_to_create_item">How to create item</string>
    <string name="Manage_Transaction_with_parties">Manage Transaction with parties</string>
    <string name="How_to_add_party_banalce">How to add party balance</string>
    <string name="How_to_create_party">How to create party</string>
    <string name="How_to_record_recieved_payment">How to record recieved payment</string>
    <string name="How_to_collect_payment_using_UPI">How to collect payment using UPI</string>
    <string name="How_to_create_quotation">How to create quotation</string>
    <string name="How_to_create_purchase">How to create purchase</string>
    <string name="How_to_create_expense">How to create expense</string>
    <string name="How_to_check_reports_using_My_BillBook">How to check reports using My BillBook</string>
    <string name="How_to_import_Vyapar_data_to_My_BillBook">How to import Vyapar data to My BillBook</string>
    <string name="How_to_print_Bill">How to print Bill</string>
    <string name="To_collect">To Collect</string>
    <string name="Stock_Value">Stock Value</string>
    <string name="This_Weeks_Sale">This Weeks Sale</string>
    <string name="To_Pay">To Pay</string>
    <string name="Overdue_Amt">Overdue Amt</string>
    <string name="Sale_Price">Sale Price</string>
    <string name="Purchase_Price">Purchase Price</string>
    <string name="Opening_Stock">Opening Stock</string>
    <string name="As_of_Date">As of Date</string>
    <string name="Low_Stock_Warning">Low Stock Warning</string>
    <string name="Item_Code">Item Code</string>
    <string name="Add_GST_Tax_Details">Add GST &amp; Tax Details</string>
    <string name="Prices_are_with_tax">Prices are with tax</string>
    <string name="Prices_are_without_tax">Prices are without tax</string>
    <string name="HSN">HSN</string>
    <string name="Save_New">Save &amp; New</string>
    <string name="Save">Save</string>
    <string name="Add_Bank_Details">Add Bank Details</string>
    <string name="Account_Number">Account Number</string>
    <string name="Verify_Account_Number">Verify Account Number</string>
    <string name="IFSC_Code">IFSC Code</string>
    <string name="Bank_and_Branch_Name">Bank and Branch Name</string>
    <string name="Account_Holder_Name">Account Holder\'s Name</string>
    <string name="Done">Done</string>
    <string name="Reports">Reports</string>
    <string name="Transactions">Transactions</string>
    <string name="Daybook">Daybook</string>
    <string name="GSTR_1_sales">GSTR-1 (sales)</string>
    <string name="Sales_Summary">Sales Summary</string>
    <string name="GSTR_2_purchase">GSTR-2 (purchase)</string>
    <string name="Profit_and_Loss">Profit and Loss</string>
    <string name="Bill_wise_Profit">Bill wise Profit</string>
    <string name="Item">Item</string>
    <string name="Stock_Summary">Stock Summary</string>
    <string name="Stock_Detail_Timeline">Stock Detail (Timeline)</string>
    <string name="Low_Stock_Summary">Low Stock Summary</string>
    <string name="Item_Sales_Summary">Item Sales Summary</string>
    <string name="Item_Report_By_Party">Item Report By Party</string>
    <string name="Rate_List">Rate List</string>
    <string name="Party">Party</string>
    <string name="Party_Report_By_Item">Party Report By Item</string>
    <string name="Party_Wise_Outstanding">Party Wise Outstanding</string>
    <string name="Party_Statement_Ledger">Party_Statement_Ledger</string>
    <string name="Expense">Expense</string>
    <string name="Expense_Transaction_Report">Expense Transaction Report</string>
    <string name="Expense_Category_Report">Expense Category Report</string>
    <string name="Notifications">Notifications</string>
    <string name="Items">Items</string>
    <string name="Create">Create</string>
    <string name="Create_Category">Create Category</string>
    <string name="ADD_Plus">ADD +</string>
    <string name="PP">PP</string>
    <string name="MRP">MRP</string>
    <string name="Select_Category">Select Category</string>
    <string name="Manage_Categories">Manage Categories</string>
    <string name="Sale_Return">Sale Return</string>
    <string name="Edit">EDIT</string>
    <string name="ITEMS">ITEMS</string>
    <string name="Add_Items">Add Items</string>
    <string name="seconds">seconds</string>
    <string name="Request_Another_OTP_in">Request Another OTP in</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Parties">Parties</string>
    <string name="Query">Query</string>
    <string name="More">More</string>
    <string name="Upload_items_in_bulk">Upload items in bulk</string>
    <string name="Items_Library">Items Library</string>
    <string name="Quickly_add_items_from_our_database_of_lakh_items">Quickly add items from our database of 1 lakh items</string>
    <string name="Vyapar_App_data_import">Vyapar App data import</string>
    <string name="Import_items_parties_and_invoices_from_vyapar_app">Import items, parties and invoices from vyapar app</string>
    <string name="Excel_file">Excel(.xlsx) file</string>
    <string name="Upload_your_file_in_xlsx_template_by_My_BillBook">Upload your file in xlsx template by My BillBook</string>
    <string name="Fromapps_like_Marg_Busy_Miracle">From apps like Marg, Busy, Miracle</string>
    <string name="Upload_your_item_master_list_exported_from_any_of_above_apps">Upload your item master list exported from any of above apps</string>
    <string name="PDF_or_image_of_purchase_bill_from_supplier">PDF or image of purchase bill from supplier</string>
    <string name="Upload_the_photo_or_pdf_of_purchase_bill_from_your_supplier">Upload the photo or pdf of purchase bill from your supplier</string>
    <string name="Tally_Data_Import">Tally Data Import</string>
    <string name="Import_items_parties_and_invoices_from_tally_app">Import items, parties and invoices from tally app</string>
    <string name="Resend_OTP"><u>Resend OTP</u>.</string>
</resources>