<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.VerifyMobileActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_image"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_margin="@dimen/_5sdp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_15sdp"
            android:text="@string/verify_mobile_number"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/otp_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:hint="@string/enter_oTP" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/timer_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"
                android:src="@drawable/clock">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/Request_Another_OTP_in"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/seconds_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=" 00:58 "
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/seconds"
                android:textSize="@dimen/_12sdp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/Resend_OTP"
            android:textColor="@color/btn_color"
            android:visibility="gone" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/verify_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/corner_round_btn_shape"
        android:text="@string/verify" />
</RelativeLayout>
