<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BulkUploadItemActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_image"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_15sdp"
            android:text="@string/Upload_items_in_bulk"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <RelativeLayout
        android:id="@+id/items_library_relative"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/rectangle_gray_border_bg"
        android:padding="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_toolbar">

        <TextView
            android:id="@+id/items_library_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/Items_Library"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_toRightOf="@+id/items_library_tv"
            android:background="@color/red"
            android:padding="@dimen/_1sdp"
            android:text="New"
            android:textColor="@color/white"
            android:textSize="@dimen/_6sdp" />

        <ImageView
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:layout_alignParentRight="true"
            android:src="@drawable/right_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/items_library_tv"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/Quickly_add_items_from_our_database_of_lakh_items" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/vyapar_data_import_relative"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/rectangle_gray_border_bg"
        android:padding="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/items_library_relative">

        <TextView
            android:id="@+id/vyapar_data_import_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/Vyapar_App_data_import"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <ImageView
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:layout_alignParentRight="true"
            android:src="@drawable/right_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vyapar_data_import_tv"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/Import_items_parties_and_invoices_from_vyapar_app" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tally_relative"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/rectangle_gray_border_bg"
        android:padding="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vyapar_data_import_relative">

        <TextView
            android:id="@+id/tally_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/Tally_Data_Import"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <ImageView
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:layout_alignParentRight="true"
            android:src="@drawable/right_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tally_tv"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/Import_items_parties_and_invoices_from_tally_app" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/excel_relative"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/rectangle_gray_border_bg"
        android:padding="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tally_relative">

        <TextView
            android:id="@+id/excel_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/Excel_file"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <ImageView
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:layout_alignParentRight="true"
            android:src="@drawable/right_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/excel_tv"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/Upload_your_file_in_xlsx_template_by_My_BillBook" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/marg_relative"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/rectangle_gray_border_bg"
        android:padding="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/excel_relative">

        <TextView
            android:id="@+id/marg_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/Fromapps_like_Marg_Busy_Miracle"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <ImageView
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:layout_alignParentRight="true"
            android:src="@drawable/right_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/marg_tv"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/Upload_your_item_master_list_exported_from_any_of_above_apps" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pdf_images_relative"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/rectangle_gray_border_bg"
        android:padding="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marg_relative">

        <TextView
            android:id="@+id/pdf_images_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/PDF_or_image_of_purchase_bill_from_supplier"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <ImageView
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:layout_alignParentRight="true"
            android:src="@drawable/right_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pdf_images_tv"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/Upload_the_photo_or_pdf_of_purchase_bill_from_your_supplier" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>