<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!-- app:layout_behavior="@string/bottom_sheet_behavior"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sort_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/sort_fiter"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/sort_tv"
            android:background="@color/light_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view1"
            android:layout_margin="@dimen/_11sdp"
            android:text="@string/sort_parties_by" />

        <RelativeLayout
            android:id="@+id/high_to_low_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/amount_high_to_low"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp"
                android:layout_centerVertical="true"
                />

            <RadioButton
                android:id="@+id/high_to_low_radio"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/_5sdp"
                android:buttonTint="@color/btn_color"
                android:scaleX="0.6"
                android:layout_centerVertical="true"
                android:scaleY="0.6" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/low_to_high_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/amount_low_to_high"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                android:textSize="@dimen/_9sdp" />

            <RadioButton
                android:id="@+id/low_to_high_radio"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/_5sdp"
                android:buttonTint="@color/btn_color"
                android:scaleX="0.6"
                android:layout_centerVertical="true"
                android:scaleY="0.6" />
        </RelativeLayout>

        <Button
            android:id="@+id/apply_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/corner_round_btn_shape"
            android:text="@string/apply"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>
